# OOP2-course-projects

Calculator/: CMakeLists.txt  README.txt
Calculator/include/: CMakeLists.txt  Function.h  Macros.h  Polynom.h  Solver.h
Calculator/src/: CMakeLists.txt  Function.cpp  Polynom.cpp  Solver.cpp  main.cpp
Pipe/: CMakeLists.txt
Pipe/include/: CMakeLists.txt  CornerPipe.h  Game.h  Level.h  Pipe.h  Pipes.h  Pumper.h  PumperPipe.h  Receiver.h  ReceiverPipe.h  RotatablePipe.h  Textures.h  ThreeSidesPipe.h  TwoSidesPipe.h  macros.h
Pipe/resources/: CMakeLists.txt  Level1.txt
Pipe/src/: CMakeLists.txt  CornerPipe.cpp  Game.cpp  Level.cpp  Pipe.cpp  Pipes.cpp  Pumper.cpp  PumperPipe.cpp  Receiver.cpp  ReceiverPipe.cpp  RotatablePipe.cpp  Textures.cpp  ThreeSidesPipe.cpp  TwoSidesPipe.cpp  main.cpp
Templates/: CMakeLists.txt  README.txt
Templates/include/: BaseField.h  CMakeLists.txt  DateValidator.h  Field.h  Form.h  IDValidator.h  NoDigitValidator.h  NonNegativeValidator.h  NotGreaterThanValidator.h  RangeValidator.h  RoomValidator.h  SumValidator.h  Validator.h
Templates/src/: BaseField.cpp  CMakeLists.txt  DateValidator.cpp  Field.cpp  Form.cpp  IDValidator.cpp  NoDigitValidator.cpp  NonNegativeValidator.cpp  NotGreaterThanValidator.cpp  RangeValidator.cpp  RoomValidator.cpp  (+3 more)
ex01_solution/: CMakeLists.txt  README.txt
ex01_solution/include/: Add.h  Comp.h  Function.h  FunctionCalculator.h  Ln.h  Log.h  Mul.h  Poly.h  Sin.h
ex01_solution/src/: Add.cpp  CMakeLists.txt  Comp.cpp  FunctionCalculator.cpp  Ln.cpp  Log.cpp  Mul.cpp  Poly.cpp  Sin.cpp  main.cpp
